feat: normalize code
